@@ -1,0 +1,21 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.16.0
+// source: user_info.sql
+
+package generated
+
+import (
+	"context"
+)
+
+const getUsername = `-- name: GetUsername :one
+SELECT username from "Users" where id=$1
+`
+
+func (q *Queries) GetUsername(ctx context.Context, id int64) (string, error) {
+	row := q.db.QueryRowContext(ctx, getUsername, id)
+	var username string
+	err := row.Scan(&username)
+	return username, err
+}
