@@ -1,0 +1,3 @@
+
+-- name: GetUsername :one
+SELECT username from "Users" where id=$1;
