@@ -2,9 +2,6 @@ package database
 
 import (
 	"context"
-	"database/sql"
-	"errors"
-	"fmt"
 
 	"github.com/comment-anything/ca-back-end/communication"
 	"github.com/comment-anything/ca-back-end/database/generated"
@@ -24,24 +21,12 @@ func (st *Store) GetCommUser(user *generated.User) (*communication.UserProfile, 
 	prof.UserId = user.ID
 	prof.Username = user.Username
 
-	prof.IsAdmin = false
-	ad_assnments, err := st.Queries.GetAdminAssignment(context.Background(), user.ID)
-	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			prof.IsAdmin = false
-		} else {
-			return &prof, errors.New("Error figuring out if admin.")
-		}
-	}
-	for _, a := range ad_assnments {
-		fmt.Printf("Checking assignment %v \n\t currently: %v", a, prof.IsAdmin)
-		if a.IsDeactivation.Valid && a.IsDeactivation.Bool == prof.IsAdmin {
-			prof.IsAdmin = !prof.IsAdmin
-		}
-		if !a.IsDeactivation.Valid && !prof.IsAdmin {
-			prof.IsAdmin = !prof.IsAdmin
-		}
-	}
-
+	isAdmin, _ := st.IsAdmin(user.ID)
+	prof.IsAdmin = isAdmin
 	return &prof, nil
+}
+
+func (st *Store) GetUsername(id int64) string {
+	s, _ := st.Queries.GetUsername(context.Background(), id)
+	return s
 }
