@@ -14,7 +14,19 @@ func (c *GuestController) HandleCommandCommentReply(comm *communication.CommentR
 }
 
 /** HandleCommandCommentReply on a member controller calls the appropriate functions on a pagemanager and page to post a new comment. */
-func (c *MemberControllerBase) HandleCommandCommentReply(comm *communication.CommentReply, serv *Server) {
+func (c *MemberController) HandleCommandCommentReply(comm *communication.CommentReply, serv *Server) {
+	if c.Page == nil {
+		c.AddMessage(false, "You can't post a comment here.")
+	} else {
+		ok, msg := c.Page.NewComment(c, comm, serv)
+		if !ok {
+			c.AddMessage(false, msg)
+		}
+	}
+}
+
+/** HandleCommandCommentReply on a admin controller calls the appropriate functions on a pagemanager and page to post a new comment. */
+func (c *AdminController) HandleCommandCommentReply(comm *communication.CommentReply, serv *Server) {
 	if c.Page == nil {
 		c.AddMessage(false, "You can't post a comment here.")
 	} else {
