@@ -14,7 +14,19 @@ func (c *GuestController) HandleCommandVoteComment(comm *communication.CommentVo
 }
 
 /** HandleCommandVoteComment on a member controller calls the appropriate functions on a pagemanager and page to post a new comment. */
-func (c *MemberControllerBase) HandleCommandVoteComment(comm *communication.CommentVote, serv *Server) {
+func (c *MemberController) HandleCommandVoteComment(comm *communication.CommentVote, serv *Server) {
+	if c.Page == nil {
+		c.AddMessage(false, "You can't vote on a comment here.")
+	} else {
+		ok, msg := c.Page.VoteComment(c, comm, serv)
+		if !ok {
+			c.AddMessage(false, msg)
+		}
+	}
+}
+
+/** HandleCommandVoteComment on a member controller calls the appropriate functions on a pagemanager and page to post a new comment. */
+func (c *AdminController) HandleCommandVoteComment(comm *communication.CommentVote, serv *Server) {
 	if c.Page == nil {
 		c.AddMessage(false, "You can't vote on a comment here.")
 	} else {
